crates/resource/tests/probes/derive_missing_topology.stderr
error: missing required attribute `topology = "pool|resident|service|transport|exclusive"`
 --> tests/probes/derive_missing_topology.rs:7:8
  |
7 | struct MissingTopology;
  |        ^^^^^^^^^^^^^^^
